2006-03-03  Mark Wielaard  <mark@klomp.org>

	* java/awt/Component.java (addNotify): Expand documentation.

2006-03-03  Mark Wielaard  <mark@klomp.org>

	* gnu/java/awt/peer/gtk/GtkComponentPeer.java (GtkComponentPeer):
	Always call setParentAndBounds().
	(setComponentBounds): Always call setBounds().
	(setBounds): Call setVisible().
	(setVisible): If no pixels are showing then don't make it visible.
	* gnu/java/awt/peer/gtk/GtkContainerPeer.java (endValidate): No need
	to call setParentAndBounds() anymore.

2006-03-03  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JInternalFrame.java
	(JInternalFrame): Set frame invisible.
	(show): Reformatted.
	* javax/swing/plaf/basic/BasicInternalFrameUI.java
	(installDefaults): Do not set invisible here.

2006-03-03  Roman Kennke  <kennke@aicas.com>

	* java/awt/Toolkit.java
	(getScreenInsets): Return (0,0,0,0) here.

2006-03-03  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/FlowView.java
	(FlowStrategy.layoutRow): Added check for rowCount == 0.
	(FlowStrategy.getLogicalView): Made method protected.

2006-03-03  Chris Burdess  <dog@gnu.org>

	* gnu/xml/validation/relaxng/AnyNameNameClass.java,
	  gnu/xml/validation/relaxng/AttributePattern.java,
	  gnu/xml/validation/relaxng/ChoiceNameClass.java,
	  gnu/xml/validation/relaxng/ChoicePattern.java,
	  gnu/xml/validation/relaxng/DataPattern.java,
	  gnu/xml/validation/relaxng/Define.java,
	  gnu/xml/validation/relaxng/ElementPattern.java,
	  gnu/xml/validation/relaxng/EmptyPattern.java,
	  gnu/xml/validation/relaxng/FullSyntaxBuilder.java,
	  gnu/xml/validation/relaxng/Grammar.java,
	  gnu/xml/validation/relaxng/GrammarException.java,
	  gnu/xml/validation/relaxng/GrammarValidator.java,
	  gnu/xml/validation/relaxng/GroupPattern.java,
	  gnu/xml/validation/relaxng/InterleavePattern.java,
	  gnu/xml/validation/relaxng/ListPattern.java,
	  gnu/xml/validation/relaxng/NSNameNameClass.java,
	  gnu/xml/validation/relaxng/NameClass.java,